--- a/cinema/src/main/resources/application.properties
+++ b/cinema/src/main/resources/application.properties
@@ -1,1 +1,7 @@
-
+spring.datasource.url=jdbc:postgresql://localhost:8090/postgres
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.jpa.properties.hibernate.default_schema=cinema
+#spring.jpa.open-in-view=false # no lazy initialization
+spring.jpa.show-sql=true
+#spring.jpa.hibernate.ddl-auto=create
