added ResponseHandler, configured CORS to get all requests, implemented login/reg logic

--- a/cinema/src/main/resources/application.properties
+++ b/cinema/src/main/resources/application.properties
@@ -2,6 +2,7 @@ spring.datasource.url=jdbc:postgresql://localhost:8090/postgres
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.jpa.properties.hibernate.default_schema=cinema
-#spring.jpa.open-in-view=false # no lazy initialization
+# uncomment to set no lazy initialization
+#spring.jpa.open-in-view=false
 spring.jpa.show-sql=true
 #spring.jpa.hibernate.ddl-auto=create
