add Actor, Director classes

--- a/cinema/src/main/resources/application.properties
+++ b/cinema/src/main/resources/application.properties
@@ -5,4 +5,4 @@ spring.jpa.properties.hibernate.default_schema=cinema
 # uncomment to set no lazy initialization
 #spring.jpa.open-in-view=false
 spring.jpa.show-sql=true
-#spring.jpa.hibernate.ddl-auto=create
+#spring.jpa.hibernate.ddl-auto=update
