--- a/cinema/src/main/resources/application.properties
+++ b/cinema/src/main/resources/application.properties
@@ -6,3 +6,10 @@ spring.jpa.properties.hibernate.default_schema=cinema
 #spring.jpa.open-in-view=false
 spring.jpa.show-sql=true
 #spring.jpa.hibernate.ddl-auto=update
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=quad.cinema.ua@gmail.com
+spring.mail.password=gpiuqtervykwcikt
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
